--- a/src/app/mapas/components/zoom-range/zoom-range.component.css
+++ b/src/app/mapas/components/zoom-range/zoom-range.component.css
@@ -1,5 +1,14 @@
-#mapa {
+.mapa-container {
     height: 100%;
     width: 100%;
 }
-
+.row {
+    background-color: aliceblue;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 50px;
+    left: 50px;
+    padding: 10px;
+    z-index: 999;
+    width: 400px;
+}
